// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GeneralInformationSection should match a snapshot when isListed equal to false 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Formik
    initialValues={Object {}}
    onSubmit={[Function]}
  >
    <Form>
      <form
        action="#"
        onReset={[Function]}
        onSubmit={[Function]}
      >
        <GeneralInformationSection
          isFreeVal={false}
          isListed={false}
        >
          <FormSection
            data-test="submit-app-form"
          >
            <div
              className="form-section"
            >
              <PersistantNotification
                className="e1g28qe3-el-mb7"
                intent="secondary"
                isExpanded={true}
                isFullWidth={true}
                isInline={true}
              >
                <ElPersistantNotification
                  className="e1g28qe3-el-mb7 epibvz0-el-intent-secondary evmehgn-el-is-active e1rlwnim-el-pn-is-full-width e10l30r1-el-pn-is-inline"
                >
                  <div
                    className="e1g28qe3-el-mb7 epibvz0-el-intent-secondary evmehgn-el-is-active e1rlwnim-el-pn-is-full-width e10l30r1-el-pn-is-inline eiq7urd-el-persistant-notification"
                  >
                    <div
                      className="e1f8chn8-el-pn-icon"
                      onClick={[Function]}
                    >
                      <Icon
                        icon="infoSolidSystem"
                      >
                        <ElIcon
                          className=""
                          style={
                            Object {
                              "fontSize": undefined,
                            }
                          }
                        >
                          <span
                            className="ej9yrfo-el-icon"
                            style={
                              Object {
                                "fontSize": undefined,
                              }
                            }
                          >
                            <Memo()>
                              <svg
                                fill="none"
                                height="1em"
                                viewBox="0 0 20 20"
                                width="1em"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M9.99958 0C4.47746 0 0 4.47746 0 9.99958C0 15.5217 4.47746 20 9.99958 20C15.5217 20 20 15.5217 20 9.99958C20 4.47746 15.5217 0 9.99958 0ZM12.0813 15.498C11.5666 15.7012 11.1568 15.8552 10.8495 15.9619C10.5431 16.0686 10.1867 16.1219 9.78116 16.1219C9.1581 16.1219 8.67302 15.9695 8.32762 15.6656C7.98222 15.3617 7.81037 14.9765 7.81037 14.5084C7.81037 14.3263 7.82307 14.1401 7.84847 13.9505C7.87471 13.7608 7.91619 13.5475 7.97291 13.3079L8.61714 11.0324C8.67386 10.814 8.72296 10.6066 8.7619 10.4135C8.80085 10.2188 8.81947 10.0402 8.81947 9.87767C8.81947 9.58815 8.75937 9.38497 8.64 9.27069C8.51894 9.1564 8.29122 9.10053 7.95175 9.10053C7.78582 9.10053 7.61481 9.12508 7.43958 9.17672C7.26603 9.23005 7.11534 9.27831 6.99175 9.32571L7.1619 8.62476C7.58349 8.45291 7.9873 8.30561 8.37249 8.1837C8.75767 8.06011 9.12169 7.99915 9.46455 7.99915C10.0834 7.99915 10.5608 8.14984 10.8969 8.44783C11.2313 8.74667 11.3998 9.13524 11.3998 9.6127C11.3998 9.71175 11.3879 9.88614 11.3651 10.135C11.3422 10.3848 11.299 10.6125 11.2364 10.8216L10.5956 13.0904C10.5431 13.2724 10.4965 13.4806 10.4542 13.7134C10.4127 13.9462 10.3924 14.124 10.3924 14.2434C10.3924 14.5448 10.4593 14.7505 10.5947 14.8597C10.7285 14.9689 10.963 15.0239 11.2948 15.0239C11.4514 15.0239 11.6267 14.996 11.8248 14.9418C12.0212 14.8876 12.1634 14.8394 12.2531 14.7979L12.0813 15.498ZM11.9678 6.2891C11.669 6.56677 11.3092 6.70561 10.8885 6.70561C10.4686 6.70561 10.1062 6.56677 9.80487 6.2891C9.50519 6.01143 9.35365 5.67365 9.35365 5.27915C9.35365 4.8855 9.50603 4.54688 9.80487 4.26667C10.1062 3.98561 10.4686 3.84593 10.8885 3.84593C11.3092 3.84593 11.6698 3.98561 11.9678 4.26667C12.2667 4.54688 12.4165 4.8855 12.4165 5.27915C12.4165 5.6745 12.2667 6.01143 11.9678 6.2891Z"
                                  fill="currentColor"
                                />
                              </svg>
                            </Memo()>
                          </span>
                        </ElIcon>
                      </Icon>
                    </div>
                    <div
                      className="e1mwx0ir-el-pn-content"
                    >
                      For more information on how to complete this form, please view our "Step-by-step" guide 
                      <a
                        className="l3gjl5x-link"
                        href="https://foundations-documentation.reapit.cloud/developer-portal"
                        rel="noopener noreferrer"
                        target="_blank"
                      >
                        here
                      </a>
                    </div>
                  </div>
                </ElPersistantNotification>
              </PersistantNotification>
              <FormHeading>
                <div
                  className="form-heading"
                >
                  App Listing
                </div>
              </FormHeading>
              <FormSubHeading>
                <div
                  className="form-subheading"
                >
                  The section below relates to the fields that comprise the listing of your application as it will appear to a user in the Marketplace. It also includes details we will use to enable us to contact you about your submitted application, how best to make your app discoverable to users and to determine where to launch it from the marketplace. When you have done your initial app setup and you are ready to list your app in the Marketplace, please return here and select “Submit for Approval”.
                </div>
              </FormSubHeading>
              <Grid
                isMultiLine={true}
              >
                <div
                  className="columns is-multiline"
                  data-test=""
                >
                  <GridItem>
                    <div
                      className="column"
                      data-test=""
                    >
                      <Input
                        dataTest="submit-app-name"
                        id="name"
                        labelText="Name"
                        name="name"
                        placeholder="The name of your app as it will appear to users"
                        required={true}
                        type="text"
                      >
                        <Field
                          name="name"
                          validate={[Function]}
                        >
                          <div
                            className="field"
                          >
                            <div
                              className="control "
                            >
                              <label
                                className="label inline-block required-label"
                                htmlFor="name"
                              >
                                Name
                              </label>
                              <input
                                className="input is-primary"
                                data-test="submit-app-name"
                                disabled={false}
                                id="name"
                                name="name"
                                onBlur={[Function]}
                                onChange={[Function]}
                                placeholder="The name of your app as it will appear to users"
                                type="text"
                                value=""
                              />
                            </div>
                          </div>
                        </Field>
                      </Input>
                    </div>
                  </GridItem>
                  <GridItem>
                    <div
                      className="column"
                      data-test=""
                    >
                      <div
                        className="control"
                      >
                        <div
                          className="ctlfpkh-checkbox"
                        >
                          <Checkbox
                            id="isListed"
                            labelText="Submit for approval"
                            name="isListed"
                          >
                            <div
                              className="field "
                            >
                              <div
                                className="control"
                              >
                                <Field
                                  name="isListed"
                                  type="checkbox"
                                >
                                  <div
                                    className="field field-checkbox"
                                  >
                                    <input
                                      checked={false}
                                      className="checkbox"
                                      data-test=""
                                      disabled={false}
                                      id="isListed"
                                      onChange={[Function]}
                                      type="checkbox"
                                      value=""
                                    />
                                    <label
                                      className="label"
                                      htmlFor="isListed"
                                    >
                                      Submit for approval
                                    </label>
                                  </div>
                                </Field>
                              </div>
                            </div>
                          </Checkbox>
                        </div>
                      </div>
                    </div>
                  </GridItem>
                </div>
              </Grid>
              <Grid>
                <div
                  className="columns"
                  data-test=""
                >
                  <GridItem>
                    <div
                      className="column"
                      data-test=""
                    >
                      <SelectBox
                        id="categoryId"
                        labelText="Category"
                        name="categoryId"
                        options={Array []}
                      >
                        <Field
                          name="categoryId"
                          validate={null}
                        >
                          <div
                            className="field"
                          >
                            <div
                              className="control"
                            >
                              <label
                                className="label "
                                htmlFor="categoryId"
                              >
                                Category
                              </label>
                              <select
                                className="input is-primary "
                                data-test=""
                                name="categoryId"
                                onBlur={[Function]}
                                onChange={[Function]}
                                value=""
                              >
                                <option
                                  disabled={true}
                                  hidden={true}
                                  value=""
                                >
                                  Please select
                                </option>
                              </select>
                            </div>
                          </div>
                        </Field>
                      </SelectBox>
                    </div>
                  </GridItem>
                  <GridItem>
                    <div
                      className="column"
                      data-test=""
                    >
                      <Input
                        dataTest="submit-app-home-page"
                        id="homePage"
                        labelText="Home page"
                        name="homePage"
                        placeholder="Your company homepage. HTTP:// or HTTPS://"
                        required={false}
                        type="text"
                      >
                        <Field
                          name="homePage"
                          validate={[Function]}
                        >
                          <div
                            className="field"
                          >
                            <div
                              className="control "
                            >
                              <label
                                className="label inline-block "
                                htmlFor="homePage"
                              >
                                Home page
                              </label>
                              <input
                                className="input is-primary"
                                data-test="submit-app-home-page"
                                disabled={false}
                                id="homePage"
                                name="homePage"
                                onBlur={[Function]}
                                onChange={[Function]}
                                placeholder="Your company homepage. HTTP:// or HTTPS://"
                                type="text"
                                value=""
                              />
                            </div>
                          </div>
                        </Field>
                      </Input>
                    </div>
                  </GridItem>
                </div>
              </Grid>
              <Grid>
                <div
                  className="columns"
                  data-test=""
                >
                  <GridItem>
                    <div
                      className="column"
                      data-test=""
                    >
                      <Input
                        dataTest="submit-app-support-email"
                        id="supportEmail"
                        labelText="Support email"
                        name="supportEmail"
                        placeholder="The contact to your support team if your users have a problem"
                        required={false}
                        type="email"
                      >
                        <Field
                          name="supportEmail"
                          validate={[Function]}
                        >
                          <div
                            className="field"
                          >
                            <div
                              className="control "
                            >
                              <label
                                className="label inline-block "
                                htmlFor="supportEmail"
                              >
                                Support email
                              </label>
                              <input
                                className="input is-primary"
                                data-test="submit-app-support-email"
                                disabled={false}
                                id="supportEmail"
                                name="supportEmail"
                                onBlur={[Function]}
                                onChange={[Function]}
                                placeholder="The contact to your support team if your users have a problem"
                                type="email"
                                value=""
                              />
                            </div>
                          </div>
                        </Field>
                      </Input>
                    </div>
                  </GridItem>
                  <GridItem>
                    <div
                      className="column"
                      data-test=""
                    >
                      <Input
                        dataTest="submit-app-launch-uri"
                        id="launchUri"
                        labelText="Launch URI"
                        name="launchUri"
                        placeholder="The launch page for your app. HTTPS only other than for http://localhost"
                        required={false}
                        type="text"
                      >
                        <Field
                          name="launchUri"
                          validate={[Function]}
                        >
                          <div
                            className="field"
                          >
                            <div
                              className="control "
                            >
                              <label
                                className="label inline-block "
                                htmlFor="launchUri"
                              >
                                Launch URI
                              </label>
                              <input
                                className="input is-primary"
                                data-test="submit-app-launch-uri"
                                disabled={false}
                                id="launchUri"
                                name="launchUri"
                                onBlur={[Function]}
                                onChange={[Function]}
                                placeholder="The launch page for your app. HTTPS only other than for http://localhost"
                                type="text"
                                value=""
                              />
                            </div>
                          </div>
                        </Field>
                      </Input>
                    </div>
                  </GridItem>
                </div>
              </Grid>
              <Grid>
                <div
                  className="columns"
                  data-test=""
                >
                  <GridItem>
                    <div
                      className="column"
                      data-test=""
                    >
                      <div
                        className="pb-4"
                      >
                        <Input
                          dataTest="submit-app-phone"
                          id="telephone"
                          labelText="Telephone"
                          name="telephone"
                          placeholder="Should one of our developers need to contact you about your app"
                          required={false}
                          type="tel"
                        >
                          <Field
                            name="telephone"
                            validate={[Function]}
                          >
                            <div
                              className="field"
                            >
                              <div
                                className="control "
                              >
                                <label
                                  className="label inline-block "
                                  htmlFor="telephone"
                                >
                                  Telephone
                                </label>
                                <input
                                  className="input is-primary"
                                  data-test="submit-app-phone"
                                  disabled={false}
                                  id="telephone"
                                  name="telephone"
                                  onBlur={[Function]}
                                  onChange={[Function]}
                                  placeholder="Should one of our developers need to contact you about your app"
                                  type="tel"
                                  value=""
                                />
                              </div>
                            </div>
                          </Field>
                        </Input>
                      </div>
                      <TextArea
                        dataTest="submit-app-summary"
                        id="summary"
                        labelText="Summary"
                        name="summary"
                        placeholder="A short strapline summary for your app listing. Must be between 50 and 150 characters"
                        required={false}
                      >
                        <Field
                          name="summary"
                          validate={[Function]}
                        >
                          <div
                            className="field"
                          >
                            <div
                              className="control"
                            >
                              <label
                                className="label mb-2"
                                htmlFor="summary"
                              >
                                Summary
                              </label>
                              <textarea
                                className="textarea is-primary"
                                data-test="submit-app-summary"
                                id="summary"
                                name="summary"
                                onBlur={[Function]}
                                onChange={[Function]}
                                placeholder="A short strapline summary for your app listing. Must be between 50 and 150 characters"
                              />
                            </div>
                          </div>
                        </Field>
                      </TextArea>
                    </div>
                  </GridItem>
                  <GridItem
                    className="is-half-desktop"
                  >
                    <div
                      className="column is-half-desktop"
                      data-test=""
                    >
                      <TextAreaEditor
                        actions={
                          Array [
                            "bold",
                            "italic",
                            "paragraph",
                            "olist",
                            "ulist",
                            "link",
                            Object {
                              "icon": "<b>H<sub>5</sub></b>",
                              "name": "test",
                              "result": [Function],
                              "title": "Add heading 5",
                            },
                          ]
                        }
                        containerClass="e1pmlq1f-editor"
                        dataTest="submit-app-description"
                        id="description"
                        labelText="Description"
                        name="description"
                        placeholder="A detailed description for your app listing. Must be between 150 and 1500 characters. Please note: As this field supports HTML, special characters will be included in the character count"
                        required={false}
                      >
                        <div
                          className="field"
                        >
                          <div
                            className="control"
                          >
                            <label
                              className="label mb-2 "
                              htmlFor="description"
                            >
                              Description
                            </label>
                            <Editor
                              actions={
                                Array [
                                  "bold",
                                  "italic",
                                  "paragraph",
                                  "olist",
                                  "ulist",
                                  "link",
                                  Object {
                                    "icon": "<b>H<sub>5</sub></b>",
                                    "name": "test",
                                    "result": [Function],
                                    "title": "Add heading 5",
                                  },
                                ]
                              }
                              containerClass="e1pmlq1f-editor"
                              dataTest="submit-app-description"
                              hasError={false}
                              onBlur={[Function]}
                              onChange={[Function]}
                              onPaste={[Function]}
                              placeholder="A detailed description for your app listing. Must be between 150 and 1500 characters. Please note: As this field supports HTML, special characters will be included in the character count"
                            >
                              <div
                                className="pell false e1pmlq1f-editor"
                                data-test="submit-app-description"
                                onBlur={[Function]}
                                onPaste={[Function]}
                              />
                            </Editor>
                          </div>
                        </div>
                      </TextAreaEditor>
                    </div>
                  </GridItem>
                </div>
              </Grid>
              <Grid>
                <div
                  className="columns"
                  data-test=""
                >
                  <GridItem>
                    <div
                      className="column"
                      data-test=""
                    >
                      <Input
                        dataTest="submit-app-terms-conditions"
                        id="termsAndConditionsUrl"
                        labelText="Terms and Conditions"
                        name="termsAndConditionsUrl"
                        placeholder="URL to link to your Terms and Conditions"
                        required={false}
                        type="text"
                      >
                        <Field
                          name="termsAndConditionsUrl"
                          validate={[Function]}
                        >
                          <div
                            className="field"
                          >
                            <div
                              className="control "
                            >
                              <label
                                className="label inline-block "
                                htmlFor="termsAndConditionsUrl"
                              >
                                Terms and Conditions
                              </label>
                              <input
                                className="input is-primary"
                                data-test="submit-app-terms-conditions"
                                disabled={false}
                                id="termsAndConditionsUrl"
                                name="termsAndConditionsUrl"
                                onBlur={[Function]}
                                onChange={[Function]}
                                placeholder="URL to link to your Terms and Conditions"
                                type="text"
                                value=""
                              />
                            </div>
                          </div>
                        </Field>
                      </Input>
                    </div>
                  </GridItem>
                  <GridItem>
                    <div
                      className="column"
                      data-test=""
                    >
                      <Input
                        dataTest="submit-app-privacy-policy"
                        id="privacyPolicyUrl"
                        labelText="Privacy Policy"
                        name="privacyPolicyUrl"
                        placeholder="URL to link to your Privacy Policy"
                        required={false}
                        type="text"
                      >
                        <Field
                          name="privacyPolicyUrl"
                          validate={[Function]}
                        >
                          <div
                            className="field"
                          >
                            <div
                              className="control "
                            >
                              <label
                                className="label inline-block "
                                htmlFor="privacyPolicyUrl"
                              >
                                Privacy Policy
                              </label>
                              <input
                                className="input is-primary"
                                data-test="submit-app-privacy-policy"
                                disabled={false}
                                id="privacyPolicyUrl"
                                name="privacyPolicyUrl"
                                onBlur={[Function]}
                                onChange={[Function]}
                                placeholder="URL to link to your Privacy Policy"
                                type="text"
                                value=""
                              />
                            </div>
                          </div>
                        </Field>
                      </Input>
                    </div>
                  </GridItem>
                </div>
              </Grid>
              <Grid>
                <div
                  className="columns"
                  data-test=""
                >
                  <GridItem>
                    <div
                      className="column"
                      data-test=""
                    >
                      <Input
                        dataTest="submit-app-terms-conditions"
                        disabled={false}
                        id="pricingUrl"
                        labelText="Pricing Info"
                        name="pricingUrl"
                        placeholder="URL to link to your Pricing Info"
                        type="text"
                      >
                        <Field
                          name="pricingUrl"
                          validate={[Function]}
                        >
                          <div
                            className="field"
                          >
                            <div
                              className="control "
                            >
                              <label
                                className="label inline-block "
                                htmlFor="pricingUrl"
                              >
                                Pricing Info
                              </label>
                              <input
                                className="input is-primary"
                                data-test="submit-app-terms-conditions"
                                disabled={false}
                                id="pricingUrl"
                                name="pricingUrl"
                                onBlur={[Function]}
                                onChange={[Function]}
                                placeholder="URL to link to your Pricing Info"
                                type="text"
                                value=""
                              />
                            </div>
                          </div>
                        </Field>
                      </Input>
                    </div>
                  </GridItem>
                  <GridItem>
                    <div
                      className="column"
                      data-test=""
                    >
                      <label
                        className="label inline-block"
                      >
                         
                      </label>
                      <Checkbox
                        id="isFree"
                        labelText="This application is free"
                        name="isFree"
                      >
                        <div
                          className="field "
                        >
                          <div
                            className="control"
                          >
                            <Field
                              name="isFree"
                              type="checkbox"
                            >
                              <div
                                className="field field-checkbox"
                              >
                                <input
                                  checked={false}
                                  className="checkbox"
                                  data-test=""
                                  disabled={false}
                                  id="isFree"
                                  onChange={[Function]}
                                  type="checkbox"
                                  value=""
                                />
                                <label
                                  className="label"
                                  htmlFor="isFree"
                                >
                                  This application is free
                                </label>
                              </div>
                            </Field>
                          </div>
                        </div>
                      </Checkbox>
                    </div>
                  </GridItem>
                </div>
              </Grid>
            </div>
          </FormSection>
        </GeneralInformationSection>
      </form>
    </Form>
  </Formik>
</Provider>
`;

exports[`GeneralInformationSection should match a snapshot when isListed equal to true 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Formik
    initialValues={Object {}}
    onSubmit={[Function]}
  >
    <Form>
      <form
        action="#"
        onReset={[Function]}
        onSubmit={[Function]}
      >
        <GeneralInformationSection
          isFreeVal={false}
          isListed={true}
        >
          <FormSection
            data-test="submit-app-form"
          >
            <div
              className="form-section"
            >
              <PersistantNotification
                className="e1g28qe3-el-mb7"
                intent="secondary"
                isExpanded={true}
                isFullWidth={true}
                isInline={true}
              >
                <ElPersistantNotification
                  className="e1g28qe3-el-mb7 epibvz0-el-intent-secondary evmehgn-el-is-active e1rlwnim-el-pn-is-full-width e10l30r1-el-pn-is-inline"
                >
                  <div
                    className="e1g28qe3-el-mb7 epibvz0-el-intent-secondary evmehgn-el-is-active e1rlwnim-el-pn-is-full-width e10l30r1-el-pn-is-inline eiq7urd-el-persistant-notification"
                  >
                    <div
                      className="e1f8chn8-el-pn-icon"
                      onClick={[Function]}
                    >
                      <Icon
                        icon="infoSolidSystem"
                      >
                        <ElIcon
                          className=""
                          style={
                            Object {
                              "fontSize": undefined,
                            }
                          }
                        >
                          <span
                            className="ej9yrfo-el-icon"
                            style={
                              Object {
                                "fontSize": undefined,
                              }
                            }
                          >
                            <Memo()>
                              <svg
                                fill="none"
                                height="1em"
                                viewBox="0 0 20 20"
                                width="1em"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M9.99958 0C4.47746 0 0 4.47746 0 9.99958C0 15.5217 4.47746 20 9.99958 20C15.5217 20 20 15.5217 20 9.99958C20 4.47746 15.5217 0 9.99958 0ZM12.0813 15.498C11.5666 15.7012 11.1568 15.8552 10.8495 15.9619C10.5431 16.0686 10.1867 16.1219 9.78116 16.1219C9.1581 16.1219 8.67302 15.9695 8.32762 15.6656C7.98222 15.3617 7.81037 14.9765 7.81037 14.5084C7.81037 14.3263 7.82307 14.1401 7.84847 13.9505C7.87471 13.7608 7.91619 13.5475 7.97291 13.3079L8.61714 11.0324C8.67386 10.814 8.72296 10.6066 8.7619 10.4135C8.80085 10.2188 8.81947 10.0402 8.81947 9.87767C8.81947 9.58815 8.75937 9.38497 8.64 9.27069C8.51894 9.1564 8.29122 9.10053 7.95175 9.10053C7.78582 9.10053 7.61481 9.12508 7.43958 9.17672C7.26603 9.23005 7.11534 9.27831 6.99175 9.32571L7.1619 8.62476C7.58349 8.45291 7.9873 8.30561 8.37249 8.1837C8.75767 8.06011 9.12169 7.99915 9.46455 7.99915C10.0834 7.99915 10.5608 8.14984 10.8969 8.44783C11.2313 8.74667 11.3998 9.13524 11.3998 9.6127C11.3998 9.71175 11.3879 9.88614 11.3651 10.135C11.3422 10.3848 11.299 10.6125 11.2364 10.8216L10.5956 13.0904C10.5431 13.2724 10.4965 13.4806 10.4542 13.7134C10.4127 13.9462 10.3924 14.124 10.3924 14.2434C10.3924 14.5448 10.4593 14.7505 10.5947 14.8597C10.7285 14.9689 10.963 15.0239 11.2948 15.0239C11.4514 15.0239 11.6267 14.996 11.8248 14.9418C12.0212 14.8876 12.1634 14.8394 12.2531 14.7979L12.0813 15.498ZM11.9678 6.2891C11.669 6.56677 11.3092 6.70561 10.8885 6.70561C10.4686 6.70561 10.1062 6.56677 9.80487 6.2891C9.50519 6.01143 9.35365 5.67365 9.35365 5.27915C9.35365 4.8855 9.50603 4.54688 9.80487 4.26667C10.1062 3.98561 10.4686 3.84593 10.8885 3.84593C11.3092 3.84593 11.6698 3.98561 11.9678 4.26667C12.2667 4.54688 12.4165 4.8855 12.4165 5.27915C12.4165 5.6745 12.2667 6.01143 11.9678 6.2891Z"
                                  fill="currentColor"
                                />
                              </svg>
                            </Memo()>
                          </span>
                        </ElIcon>
                      </Icon>
                    </div>
                    <div
                      className="e1mwx0ir-el-pn-content"
                    >
                      For more information on how to complete this form, please view our "Step-by-step" guide 
                      <a
                        className="l3gjl5x-link"
                        href="https://foundations-documentation.reapit.cloud/developer-portal"
                        rel="noopener noreferrer"
                        target="_blank"
                      >
                        here
                      </a>
                    </div>
                  </div>
                </ElPersistantNotification>
              </PersistantNotification>
              <FormHeading>
                <div
                  className="form-heading"
                >
                  App Listing
                </div>
              </FormHeading>
              <FormSubHeading>
                <div
                  className="form-subheading"
                >
                  The section below relates to the fields that comprise the listing of your application as it will appear to a user in the Marketplace. It also includes details we will use to enable us to contact you about your submitted application, how best to make your app discoverable to users and to determine where to launch it from the marketplace. When you have done your initial app setup and you are ready to list your app in the Marketplace, please return here and select “Submit for Approval”.
                </div>
              </FormSubHeading>
              <Grid
                isMultiLine={true}
              >
                <div
                  className="columns is-multiline"
                  data-test=""
                >
                  <GridItem>
                    <div
                      className="column"
                      data-test=""
                    >
                      <Input
                        dataTest="submit-app-name"
                        id="name"
                        labelText="Name"
                        name="name"
                        placeholder="The name of your app as it will appear to users"
                        required={true}
                        type="text"
                      >
                        <Field
                          name="name"
                          validate={[Function]}
                        >
                          <div
                            className="field"
                          >
                            <div
                              className="control "
                            >
                              <label
                                className="label inline-block required-label"
                                htmlFor="name"
                              >
                                Name
                              </label>
                              <input
                                className="input is-primary"
                                data-test="submit-app-name"
                                disabled={false}
                                id="name"
                                name="name"
                                onBlur={[Function]}
                                onChange={[Function]}
                                placeholder="The name of your app as it will appear to users"
                                type="text"
                                value=""
                              />
                            </div>
                          </div>
                        </Field>
                      </Input>
                    </div>
                  </GridItem>
                  <GridItem>
                    <div
                      className="column"
                      data-test=""
                    >
                      <div
                        className="control"
                      >
                        <div
                          className="ctlfpkh-checkbox"
                        >
                          <Checkbox
                            id="isListed"
                            labelText="Status: Listed"
                            name="isListed"
                          >
                            <div
                              className="field "
                            >
                              <div
                                className="control"
                              >
                                <Field
                                  name="isListed"
                                  type="checkbox"
                                >
                                  <div
                                    className="field field-checkbox"
                                  >
                                    <input
                                      checked={false}
                                      className="checkbox"
                                      data-test=""
                                      disabled={false}
                                      id="isListed"
                                      onChange={[Function]}
                                      type="checkbox"
                                      value=""
                                    />
                                    <label
                                      className="label"
                                      htmlFor="isListed"
                                    >
                                      Status: Listed
                                    </label>
                                  </div>
                                </Field>
                              </div>
                            </div>
                          </Checkbox>
                        </div>
                      </div>
                    </div>
                  </GridItem>
                </div>
              </Grid>
              <Grid>
                <div
                  className="columns"
                  data-test=""
                >
                  <GridItem>
                    <div
                      className="column"
                      data-test=""
                    >
                      <SelectBox
                        id="categoryId"
                        labelText="Category"
                        name="categoryId"
                        options={Array []}
                      >
                        <Field
                          name="categoryId"
                          validate={null}
                        >
                          <div
                            className="field"
                          >
                            <div
                              className="control"
                            >
                              <label
                                className="label "
                                htmlFor="categoryId"
                              >
                                Category
                              </label>
                              <select
                                className="input is-primary "
                                data-test=""
                                name="categoryId"
                                onBlur={[Function]}
                                onChange={[Function]}
                                value=""
                              >
                                <option
                                  disabled={true}
                                  hidden={true}
                                  value=""
                                >
                                  Please select
                                </option>
                              </select>
                            </div>
                          </div>
                        </Field>
                      </SelectBox>
                    </div>
                  </GridItem>
                  <GridItem>
                    <div
                      className="column"
                      data-test=""
                    >
                      <Input
                        dataTest="submit-app-home-page"
                        id="homePage"
                        labelText="Home page"
                        name="homePage"
                        placeholder="Your company homepage. HTTP:// or HTTPS://"
                        required={true}
                        type="text"
                      >
                        <Field
                          name="homePage"
                          validate={[Function]}
                        >
                          <div
                            className="field"
                          >
                            <div
                              className="control "
                            >
                              <label
                                className="label inline-block required-label"
                                htmlFor="homePage"
                              >
                                Home page
                              </label>
                              <input
                                className="input is-primary"
                                data-test="submit-app-home-page"
                                disabled={false}
                                id="homePage"
                                name="homePage"
                                onBlur={[Function]}
                                onChange={[Function]}
                                placeholder="Your company homepage. HTTP:// or HTTPS://"
                                type="text"
                                value=""
                              />
                            </div>
                          </div>
                        </Field>
                      </Input>
                    </div>
                  </GridItem>
                </div>
              </Grid>
              <Grid>
                <div
                  className="columns"
                  data-test=""
                >
                  <GridItem>
                    <div
                      className="column"
                      data-test=""
                    >
                      <Input
                        dataTest="submit-app-support-email"
                        id="supportEmail"
                        labelText="Support email"
                        name="supportEmail"
                        placeholder="The contact to your support team if your users have a problem"
                        required={true}
                        type="email"
                      >
                        <Field
                          name="supportEmail"
                          validate={[Function]}
                        >
                          <div
                            className="field"
                          >
                            <div
                              className="control "
                            >
                              <label
                                className="label inline-block required-label"
                                htmlFor="supportEmail"
                              >
                                Support email
                              </label>
                              <input
                                className="input is-primary"
                                data-test="submit-app-support-email"
                                disabled={false}
                                id="supportEmail"
                                name="supportEmail"
                                onBlur={[Function]}
                                onChange={[Function]}
                                placeholder="The contact to your support team if your users have a problem"
                                type="email"
                                value=""
                              />
                            </div>
                          </div>
                        </Field>
                      </Input>
                    </div>
                  </GridItem>
                  <GridItem>
                    <div
                      className="column"
                      data-test=""
                    >
                      <Input
                        dataTest="submit-app-launch-uri"
                        id="launchUri"
                        labelText="Launch URI"
                        name="launchUri"
                        placeholder="The launch page for your app. HTTPS only other than for http://localhost"
                        required={true}
                        type="text"
                      >
                        <Field
                          name="launchUri"
                          validate={[Function]}
                        >
                          <div
                            className="field"
                          >
                            <div
                              className="control "
                            >
                              <label
                                className="label inline-block required-label"
                                htmlFor="launchUri"
                              >
                                Launch URI
                              </label>
                              <input
                                className="input is-primary"
                                data-test="submit-app-launch-uri"
                                disabled={false}
                                id="launchUri"
                                name="launchUri"
                                onBlur={[Function]}
                                onChange={[Function]}
                                placeholder="The launch page for your app. HTTPS only other than for http://localhost"
                                type="text"
                                value=""
                              />
                            </div>
                          </div>
                        </Field>
                      </Input>
                    </div>
                  </GridItem>
                </div>
              </Grid>
              <Grid>
                <div
                  className="columns"
                  data-test=""
                >
                  <GridItem>
                    <div
                      className="column"
                      data-test=""
                    >
                      <div
                        className="pb-4"
                      >
                        <Input
                          dataTest="submit-app-phone"
                          id="telephone"
                          labelText="Telephone"
                          name="telephone"
                          placeholder="Should one of our developers need to contact you about your app"
                          required={true}
                          type="tel"
                        >
                          <Field
                            name="telephone"
                            validate={[Function]}
                          >
                            <div
                              className="field"
                            >
                              <div
                                className="control "
                              >
                                <label
                                  className="label inline-block required-label"
                                  htmlFor="telephone"
                                >
                                  Telephone
                                </label>
                                <input
                                  className="input is-primary"
                                  data-test="submit-app-phone"
                                  disabled={false}
                                  id="telephone"
                                  name="telephone"
                                  onBlur={[Function]}
                                  onChange={[Function]}
                                  placeholder="Should one of our developers need to contact you about your app"
                                  type="tel"
                                  value=""
                                />
                              </div>
                            </div>
                          </Field>
                        </Input>
                      </div>
                      <TextArea
                        dataTest="submit-app-summary"
                        id="summary"
                        labelText="Summary"
                        name="summary"
                        placeholder="A short strapline summary for your app listing. Must be between 50 and 150 characters"
                        required={true}
                      >
                        <Field
                          name="summary"
                          validate={[Function]}
                        >
                          <div
                            className="field"
                          >
                            <div
                              className="control"
                            >
                              <label
                                className="label mb-2 required-label"
                                htmlFor="summary"
                              >
                                Summary
                              </label>
                              <textarea
                                className="textarea is-primary"
                                data-test="submit-app-summary"
                                id="summary"
                                name="summary"
                                onBlur={[Function]}
                                onChange={[Function]}
                                placeholder="A short strapline summary for your app listing. Must be between 50 and 150 characters"
                              />
                            </div>
                          </div>
                        </Field>
                      </TextArea>
                    </div>
                  </GridItem>
                  <GridItem
                    className="is-half-desktop"
                  >
                    <div
                      className="column is-half-desktop"
                      data-test=""
                    >
                      <TextAreaEditor
                        actions={
                          Array [
                            "bold",
                            "italic",
                            "paragraph",
                            "olist",
                            "ulist",
                            "link",
                            Object {
                              "icon": "<b>H<sub>5</sub></b>",
                              "name": "test",
                              "result": [Function],
                              "title": "Add heading 5",
                            },
                          ]
                        }
                        containerClass="e1pmlq1f-editor"
                        dataTest="submit-app-description"
                        id="description"
                        labelText="Description"
                        name="description"
                        placeholder="A detailed description for your app listing. Must be between 150 and 1500 characters. Please note: As this field supports HTML, special characters will be included in the character count"
                        required={true}
                      >
                        <div
                          className="field"
                        >
                          <div
                            className="control"
                          >
                            <label
                              className="label mb-2 required-label"
                              htmlFor="description"
                            >
                              Description
                            </label>
                            <Editor
                              actions={
                                Array [
                                  "bold",
                                  "italic",
                                  "paragraph",
                                  "olist",
                                  "ulist",
                                  "link",
                                  Object {
                                    "icon": "<b>H<sub>5</sub></b>",
                                    "name": "test",
                                    "result": [Function],
                                    "title": "Add heading 5",
                                  },
                                ]
                              }
                              containerClass="e1pmlq1f-editor"
                              dataTest="submit-app-description"
                              hasError={false}
                              onBlur={[Function]}
                              onChange={[Function]}
                              onPaste={[Function]}
                              placeholder="A detailed description for your app listing. Must be between 150 and 1500 characters. Please note: As this field supports HTML, special characters will be included in the character count"
                            >
                              <div
                                className="pell false e1pmlq1f-editor"
                                data-test="submit-app-description"
                                onBlur={[Function]}
                                onPaste={[Function]}
                              />
                            </Editor>
                          </div>
                        </div>
                      </TextAreaEditor>
                    </div>
                  </GridItem>
                </div>
              </Grid>
              <Grid>
                <div
                  className="columns"
                  data-test=""
                >
                  <GridItem>
                    <div
                      className="column"
                      data-test=""
                    >
                      <Input
                        dataTest="submit-app-terms-conditions"
                        id="termsAndConditionsUrl"
                        labelText="Terms and Conditions"
                        name="termsAndConditionsUrl"
                        placeholder="URL to link to your Terms and Conditions"
                        required={true}
                        type="text"
                      >
                        <Field
                          name="termsAndConditionsUrl"
                          validate={[Function]}
                        >
                          <div
                            className="field"
                          >
                            <div
                              className="control "
                            >
                              <label
                                className="label inline-block required-label"
                                htmlFor="termsAndConditionsUrl"
                              >
                                Terms and Conditions
                              </label>
                              <input
                                className="input is-primary"
                                data-test="submit-app-terms-conditions"
                                disabled={false}
                                id="termsAndConditionsUrl"
                                name="termsAndConditionsUrl"
                                onBlur={[Function]}
                                onChange={[Function]}
                                placeholder="URL to link to your Terms and Conditions"
                                type="text"
                                value=""
                              />
                            </div>
                          </div>
                        </Field>
                      </Input>
                    </div>
                  </GridItem>
                  <GridItem>
                    <div
                      className="column"
                      data-test=""
                    >
                      <Input
                        dataTest="submit-app-privacy-policy"
                        id="privacyPolicyUrl"
                        labelText="Privacy Policy"
                        name="privacyPolicyUrl"
                        placeholder="URL to link to your Privacy Policy"
                        required={true}
                        type="text"
                      >
                        <Field
                          name="privacyPolicyUrl"
                          validate={[Function]}
                        >
                          <div
                            className="field"
                          >
                            <div
                              className="control "
                            >
                              <label
                                className="label inline-block required-label"
                                htmlFor="privacyPolicyUrl"
                              >
                                Privacy Policy
                              </label>
                              <input
                                className="input is-primary"
                                data-test="submit-app-privacy-policy"
                                disabled={false}
                                id="privacyPolicyUrl"
                                name="privacyPolicyUrl"
                                onBlur={[Function]}
                                onChange={[Function]}
                                placeholder="URL to link to your Privacy Policy"
                                type="text"
                                value=""
                              />
                            </div>
                          </div>
                        </Field>
                      </Input>
                    </div>
                  </GridItem>
                </div>
              </Grid>
              <Grid>
                <div
                  className="columns"
                  data-test=""
                >
                  <GridItem>
                    <div
                      className="column"
                      data-test=""
                    >
                      <Input
                        dataTest="submit-app-terms-conditions"
                        disabled={false}
                        id="pricingUrl"
                        labelText="Pricing Info"
                        name="pricingUrl"
                        placeholder="URL to link to your Pricing Info"
                        type="text"
                      >
                        <Field
                          name="pricingUrl"
                          validate={[Function]}
                        >
                          <div
                            className="field"
                          >
                            <div
                              className="control "
                            >
                              <label
                                className="label inline-block "
                                htmlFor="pricingUrl"
                              >
                                Pricing Info
                              </label>
                              <input
                                className="input is-primary"
                                data-test="submit-app-terms-conditions"
                                disabled={false}
                                id="pricingUrl"
                                name="pricingUrl"
                                onBlur={[Function]}
                                onChange={[Function]}
                                placeholder="URL to link to your Pricing Info"
                                type="text"
                                value=""
                              />
                            </div>
                          </div>
                        </Field>
                      </Input>
                    </div>
                  </GridItem>
                  <GridItem>
                    <div
                      className="column"
                      data-test=""
                    >
                      <label
                        className="label inline-block"
                      >
                         
                      </label>
                      <Checkbox
                        id="isFree"
                        labelText="This application is free"
                        name="isFree"
                      >
                        <div
                          className="field "
                        >
                          <div
                            className="control"
                          >
                            <Field
                              name="isFree"
                              type="checkbox"
                            >
                              <div
                                className="field field-checkbox"
                              >
                                <input
                                  checked={false}
                                  className="checkbox"
                                  data-test=""
                                  disabled={false}
                                  id="isFree"
                                  onChange={[Function]}
                                  type="checkbox"
                                  value=""
                                />
                                <label
                                  className="label"
                                  htmlFor="isFree"
                                >
                                  This application is free
                                </label>
                              </div>
                            </Field>
                          </div>
                        </div>
                      </Checkbox>
                    </div>
                  </GridItem>
                </div>
              </Grid>
            </div>
          </FormSection>
        </GeneralInformationSection>
      </form>
    </Form>
  </Formik>
</Provider>
`;
